[package]
name = "proxy_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
xray-core = { version = "0.2", features = ["client", "connect"] }
prost = "0.13"
tonic = "0.12"
